<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="stu.ntdat.chatisfun.viewmodel.AuthViewModel"/>
        <variable
            name="viewModel"
            type="AuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragment.RegisterFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.message}"
            android:textColor="@color/red"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="lol"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="lol"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/register_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="lol"
            android:hint="@string/re_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    </LinearLayout>
</layout>